# clicker_program

./: README.md  app.spec  commands.py  compiler.py  compiler_config.py  decompiler.py  executor.py  executor_process.py  gui.py  gui_2.py  gui_3.py  gui_utils.py  instruction_set.py  language_specs.py  logger_config.py  main.py  main_record.py  processes_utils.py  program.txt  pyproject.toml  recorder.py  recorder_process.py  recording.txt  requirements.txt  run_win.vbs  settings.json  utils.py
app_logic/: instruction_set.py
app_logic/compiler/: compiler.py  compiler_config.py
app_logic/recorder/: recorder.py
app_logic/virtual_machine/: executor.py  executor_process.py
assets/: attributions.txt
docs/: README_it.md  language.md  language_en.md  linguaggio_it.md  linguaggio_ita.md
example_programs/: fn.txt  functions.txt  tutorial.txt  variables.txt
src/: main.py
src/app_logic/: instruction_names.py  instruction_set.py
src/app_logic/compiler/: compiler.py  compiler_config.py
src/app_logic/decompiler/: decompiler.py
src/app_logic/recorder/: recorder.py  recorder_process.py
src/app_logic/virtual_machine/: executor.py  executor_process.py
src/utils/: allowed_keys.py  key_translator.py  logger_config.py  processes_utils.py  resource_resolver.py  script_tools.py  settings.json  version.py
src/view/: gui_3.py  gui_utils.py  settings.py  settings_dialog.py
utils/: processes_utils.py  script_tools.py
view/: gui_3.py  gui_utils.py  settings.py
