[project]
name = "clicker-program"
version = "0.1.0"
description = "Lightweight app for recording, scripting, and replaying mouse click sequences to automate repetitive GUI tasks; supports adjustable timing, playback options, and scriptable action sequences."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bottle>=0.13.4",
    "keyboard>=0.13.5",
    "pip>=25.3",
    "pyautogui>=0.9.54",
    "pyinstaller>=6.16.0",
    "pynput>=1.8.1",
    "pyqt6>=6.10.0",
]

[tool.uv]
package = true

[project.scripts]
clickerapp = "src.main:main"
