[project]
name = "clicker-program"
version = "1.0.3"
description = "Lightweight app for recording, scripting, and replaying mouse click sequences to automate repetitive GUI tasks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keyboard>=0.13.5",
    "pip>=25.3",
    "plyer>=2.1.0",
    "pyautogui>=0.9.54",
    "pyinstaller>=6.16.0",
    "pynput>=1.8.1",
    "pyqt6>=6.10.0",
]

[tool.uv]
package = true

[project.scripts]
clickerapp = "src.main:main"
